
- Statement counting is now suppressed in the generated c code for probes that
  are non-recursive and loop-free. Statement counting can be turned back on in
  unoptimize mode (-u).

- SystemTap now asserts that the PID provided for a process probe corresponds
  to a runnning process.

- DWARF process probes can be bound to a specific process using the form:

  process(PID).function("*")

* What's new in version 2.5, 2014-04-30

- Systemtap now supports backtracing through its own, invoking module.

- Java probes now support backtracing using the print_java_backtrace()
  and sprint_java_backtrace() functions.

- Statement probes (e.g. process.statement) are now faster to resolve,
  more precise, and work better with inlined functions.

- New switches have been added to help inspect the contents of installed
  library files:

  stap --dump-functions --> list all library functions and their args
  stap --dump-probe-aliases --> list all library probe aliases

- The heuristic algorithms used to search for function-prologue
  endings were improved, to cover more optimization (or
  lack-of-optimization, or incorrect-debuginfo) cases.  These
  heuristics are necessary to find $context parameters for some
  function-call/entry probes.  We recommend programs be built with
  CFLAGS+=-grecord-gcc-switches to feed information to the heuristics.

- The stap --use-server option now more correctly supports address:port
  type parametrization, for manual use in the absence of avahi.

- A new probe alias "oneshot" allows a single quick script fragment to run,
  then exit.

- The argv tapset now merges translate-time and run-time positional
  arguments, so all of these work:

  stap -e 'probe oneshot {println(argv[1]," ",argv[2])}' hello world

  stap -e 'probe oneshot {println(argv[1]," ",argv[2])}' \
       -G argv_1=hello -G argv_2=world

  staprun hello.ko argv_1=hello argv_2=world

- SystemTap now falls back on the symbol table for probing