@@ -21,6 +21,17 @@
 
   process(PID).function("*")
 
+- SystemTap now accepts additional scripts through the new -E SCRIPT option.
+  There still needs to be a main script specified through -e or file in order
+  to provide an additional script. This makes it feasible to have scripts in
+  the $HOME/.systemtap/rc file. Such a script could be, for example:
+
+  -E 'probe begin, end, error { log("systemtap script " . pn()) }'
+
+  The -E SCRIPT option can also be used in lisitng mode (-l/-L), such that
+  probe points for the additional scripts will not listed, but other parts of
+  the script are still available, such as macros or aliases.
+
 * What's new in version 2.5, 2014-04-30
 
 - Systemtap now supports backtracing through its own, invoking module.
